[package]
name = "towa-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
towa-core = "0.1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["parking_lot"] }

[dependencies.clap]
version = "4.3.0"
default-features = false
features = ["std", "color", "help", "usage", "error-context", "derive"]
