[package]
name = "towa-core"
version = "0.1.0"
edition = "2021"
description = "A super strong and super slow encrypt-er"
repository = "https://github.com/haruki-nikaidou/towa-core"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
byteorder = "1.5.0"
sha2 = "0.10.8"
threefish = "0.5.2"
